--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ nav {
   justify-content: space-evenly;
   gap: 30px 40px;
 }
-#blog-container #blog-card {
+#blog-container .blog-card {
   width: 300px;
   padding: 15px;
   border: 2px solid rgba(14, 14, 14, 15%);
@@ -77,16 +77,16 @@ nav {
   cursor: pointer;
   transition: box-shadow 0.3s, transform 0.3s;
 }
-#blog-container #blog-card:hover {
+#blog-container .blog-card:hover {
   box-shadow: 1px 1px 2px 2px rgba(14, 14, 14, 15%);
   transform: scale(1.03);
 }
-#blog-card img {
+.blog-card img {
   width: 100%;
   max-height: 280px;
   object-fit: cover;
   border-radius: 8px;
 }
-#blog-card h2 {
+.blog-card h2 {
   padding: 12px 0;
 }
